# Trainee-task-with-CMake

./: .clang-format  CMakeLists.txt  README.md  client.cpp  client.hpp  main_cl.cpp  main_sr.cpp  server.cpp  server.hpp
